--- a/Architectural Requirements Specifications and Design.tex
+++ b/Architectural Requirements Specifications and Design.tex
@@ -236,7 +236,11 @@ A user should also be able to send a notification. The notification page should 
 
 		\section{Module Design}\label{sec:moduels}	
       \subsection{User Management Subsystem}\label{subsec:users}
-      
+      	\begin{figure}[H]
+			\includegraphics[scale=0.5]{Diagrams/User_Class_Diagram.png}
+			\caption{User Management Model Class Diagram}
+			\label{fig:User_class}
+	\end{figure}
       
       		\begin{figure}[H]
                     \centering \includegraphics[height=0.85\textheight]{UMM-Diagrams/UMM-ActivityDiagram}
