Update Architectural Requirements Specifications and Design.tex

--- a/Architectural Requirements Specifications and Design.tex
+++ b/Architectural Requirements Specifications and Design.tex
@@ -263,6 +263,13 @@ The web-based component of NavUP should be similar to the mobile-based component
 
 		\section{Module Design}\label{sec:moduels}	
       \subsection{User Management Subsystem}\label{subsec:users}
+      	\begin{figure}[H]
+			\includegraphics[scale=0.5]{Diagrams/User_Class_Diagram.png}
+			\caption{User Management Model Class Diagram}
+			\label{fig:User_class}
+		\end{figure}
+		
+		The above diagram depicts a class diagram of the User Management Model. A The Participant class is a abstract class which defines the common attributes and methods associated with the two main personnel who will interact with NavUp, namely Users and Administrators, which are the concrete implementations of Participant.\\\\
 			\subsection{Navigation Subsystem}\label{subsec:navigation}
 			
 			\subsection{Notification Subsystem}\label{subsec:notification}
