added depolyment diagram

--- a/Architectural Requirements Specifications and Design.tex
+++ b/Architectural Requirements Specifications and Design.tex
@@ -371,7 +371,12 @@ A user should also be able to send a notification. The notification page should 
 			    \end{figure}
 
 		\newpage
-
+		\begin{figure}[H]
+		 \includegraphics[height=0.8\textheight]{Diagrams/Deployment.png}
+			     \caption{Deployment Diagram for the entire system}
+					 \label{fig:deployment}
+			    \end{figure}
+			    \newpage
 		\section{System assessment}\label{sec:assessment }	
 			\subsection{Technology choices}\label{subsec:tech choices}
 			
