Final edit, add references

--- a/Architectural Requirements Specifications and Design.tex
+++ b/Architectural Requirements Specifications and Design.tex
@@ -88,23 +88,10 @@
 	
 		\subsection{Purpose}\label{subsec:purpose}
 			The main purpose of this document is firstly identifying the subsystem architectural design requirements, constraints, integration need  and then addressing these elemts by using architectural patterns and diagrams to model system behaviour and interactions. The choice of appropriate technologies for the implementation of this system that satisfy the various requirements will also be prosposed along with motivations for these propositions 
-				
-		\subsection{Definitions, Acronyms, and Abbreviations}\label{subsec:daa}
-			\begin{table}[h!]
-				\centering
-				\caption{Table of Definitions, Acronyms, and Abbreviations used in this document}
-				\label{tab: Table 1}
-				\begin{tabular}{| m{4cm} | m{12cm} |}
-					\hline
-					\textbf{Term} & \textbf{Definition} \\
-					\hline
-					\hline
-					
-				\end{tabular}
-			\end{table}
 	
 		\subsection{References}\label{subsec:references}
-		List each document referenced in the SRS by title, report number, date, publisher, and where and how to get it
+			{Object-Oriented Software Engineering, David C. Kung, 2013, McGraw-Hill}
+
 		
 	\section{Requirements and Constraints}\label{sec:requirements}
 
@@ -237,7 +224,7 @@ A user should also be able to send a notification. The notification page should 
 		\section{Module Design}\label{sec:moduels}	
       \subsection{User Management Subsystem}\label{subsec:users}
       	\begin{figure}[H]
-			\includegraphics[scale=0.5]{Diagrams/User_Class_Diagram.png}
+			\includegraphics[scale=0.3]{Diagrams/User_Class_Diagram.png}
 			\caption{User Management Model Class Diagram}
 			\label{fig:User_class}
 	\end{figure}
